my first commit

--- a/base_index.html
+++ b/base_index.html
@@ -1,1 +1,13 @@
 
+<!doctype html>
+<html>
+    <head>
+        <title> Famous Authors</title>
+    </head>
+<body>
+    <h4>Jack London</h4>
+    <p>"I would rather be a superb meteor, every atom of me in magnificient glow, than a sleepy and permanent planet." Said Jack 
+      <br>  The iconic American novelist, short story writer, journalist and social activist, Jack London is best known for writing Call of the Wild (1903) and White Fang. 
+      </p>
+</body>
+</html>
