--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@ wrote several works dealing with these topics, such as his dystopian novel The I
  San Francisco literary community). 
 </p>
 <a href=https://www.bing.com/search?q=jack+london+quotes&qs=SS&pq=jack+london+&sk=SS3&sc=10-12&cvid=5D27F5D106E849459CA7AB5E7BD19FD7&FORM=QBRE&sp=4&ghc=1&lq=0><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/32/Jack_London_age_9_-_crop.jpg/409px-Jack_London_age_9_-_crop.jpg"  alt="jack londons picture"/></a>
+<br><a href="tweets.html">Next page</a>
 </body>
 </html>
