--- a/tweets.html
+++ b/tweets.html
@@ -4,11 +4,25 @@
         <title> Famous Authors</title>
     </head>
 <body>
+    <header>
+        <ul>
+    <li><a href="C:\Users\Owner\html basics\alx_html_css\base_index.html">page 1</a></li>
+    <li><a href="C:\Users\Owner\html basics\alx_html_css\index.html">page 2</a></li>
+</ul>
+</header>  
     <h4>Jack London</h4>
+    <main>
+        <article>
     <p>"I would rather be a superb meteor, every atom of me in magnificient glow, than a sleepy and permanent planet." Said Jack 
       <br>  The iconic American novelist, short story writer, journalist and social activist, Jack London is best known for writing Call of the Wild (1903) and White Fang. 
       <blockquote class="twitter-tweet"><p lang="tr" dir="ltr">Arda Güler Real Madrid’e gitmiş umarım hepimizi şaşırtır ve çok iyi işler başarır.</p>&mdash; Ata Benli (@atabenli) <a href="https://twitter.com/atabenli/status/1676437519083220997?ref_src=twsrc%5Etfw">tweet</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>  
     </p>
+</article> 
+<aside>"placeholder to add comment thread later".
+</aside>
+</main>
+<footer><p> The price of success is not negotiable. For u to enjoy real success, you must be ready to stop complaining, stop looking for shortcuts and pay the full price. The newsmakers today paid their price yesterday. For u to be the news maker tomorrow, be ready to pay the price today. determine how badly u want to reach ur goals and pay the price too. strip off habits that are limiting and move on. Made by < Barkot Muhaba> - <a href="https://stackoverflow.com/questions/tagged/html" target="_blank"> here </a> 
+</footer> </p>
 <a href="index.html"> Home</a>
 </body>
 </html>
