--- a/index.html
+++ b/index.html
@@ -32,6 +32,36 @@ wrote several works dealing with these topics, such as his dystopian novel The I
 </article>
 <aside>"placeholder to add comment thread later".
 </aside>
+<article> 
+    <table>
+        <thead><tr>
+            <th>name</th>
+            <th>Age</th>
+            <th>Country</th>
+</tr>
+</thead>
+<tbody>
+    <tr>
+        <td>John</td>
+        <td>Emily</td>
+        <td>Michael</td>
+        <td>Sophia</td>
+    </tr>
+    <tr>
+        <td>25</td>
+        <td>28</td>
+        <td>32</td>
+        <td>21</td>
+    </tr>
+    <tr>
+        <td>USA</td>
+        <td>Canada</td>
+        <td>Australia</td>
+        <td>UK</td>
+    </tr>
+</tbody>
+    </table>
+</article>
 </main>
 <footer><p> There is a price to pay for everything worth while on the planet earth. If u desire to be stand out, then u must be ready to pay the price of success. 
     Nobody can achieve success in marriage, career or life without dedication. You cannot become a success without paying the price.  Made by < Barkot Muhaba>
